[package]
name = "runes"
version = "0.2.5"
authors = ["Determinant <tederminant@gmail.com>"]
description = "No-std NES emulator library and minimal emulator written purely in Rust."
repository = "https://github.com/Determinant/runes"
keywords = ["nes", "emulator", "6502"]
categories = ["no-std", "emulators"]
edition = "2018"
license = "MIT"

[dev-dependencies]
clap = "2.33.3"

[dev-dependencies.sdl2]
version = "0.34.3"
features = ["unsafe_textures"]

[lib]
name = "runes"
path = "src/lib.rs"

[[example]]
name = "runes"
path = "src/bin.rs"
